--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 ### Apache Config ###
 /Conf/apache/vhost/*vhost.conf
+!Conf/apache/vhost/.gitkeep
 /Conf/apache/httpd.conf
 
 ### Nginx Config ###
 /Conf/nginx/site-enable/*vhost.conf
+!Conf/nginx/site-enable/.gitkeep
 /Conf/nginx/nginx.conf
 
 ### Web Config ###
