--- a/Conf/nginx/global/symfony.conf
+++ b/Conf/nginx/global/symfony.conf
@@ -1,4 +1,4 @@
-location ~ ^/(index|frontend_dev|admintools_dev|app|app_dev)\.php(/|$) {
+location ~ ^/(index|frontend_dev|admintools|admintools_dev|app|app_dev)\.php(/|$) {
     fastcgi_pass                  $fcgi_pass;
     fastcgi_split_path_info       ^(.+\.php)(/.*)$;
 
