--- a/.bash_profile.dist
+++ b/.bash_profile.dist
@@ -1,6 +1,6 @@
-USER_HOME="/Users/Nicky"
+USER_HOME="/Users/nicky"
 DOMAIN_SELF="dev"
-source $USER_HOME/Web/bash/init-function.bash
+source $USER_HOME/Web/config/bash/init-function.bash
 
 ### Setting for the new UTF-8 terminal support in Lion
 export LC_CTYPE=en_US.UTF-8
@@ -17,4 +17,5 @@ export PS1='[\[\e[0;35m\]\h\[\e[m\]: \[\e[0;36m\]\w\[\e[m\] ] \n\[\e[1;32m\]\u \
 
 ### Set Paths
 # ------------------------------------------------------------
-export PATH="$USER_HOME/Web/bin:/usr/local/sbin:$PATH"
+export PATH="$USER_HOME/Web/config/bin:$PATH"
+# ------------------------------------------------------------
