update nginx config

--- a/server/nginx/global/php.docker.conf
+++ b/server/nginx/global/php.docker.conf
@@ -4,8 +4,9 @@ location ~ \.php$ {
    
     include                       fastcgi_params;
     fastcgi_param PATH_INFO       $fastcgi_path_info;
-    fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param PATH_TRANSLATED /code/web$fastcgi_path_info;
+    fastcgi_param SCRIPT_FILENAME /code/web$fastcgi_script_name;
+    fastcgi_param DOCUMENT_ROOT /code/web;
 }
 
 location ~ ^/(index|frontend_dev|admintools|admintools_dev|app|app_dev)\.php(/|$) {
@@ -13,6 +14,9 @@ location ~ ^/(index|frontend_dev|admintools|admintools_dev|app|app_dev)\.php(/|$
     fastcgi_split_path_info       ^(.+\.php)(/.*)$;
 
     include                       fastcgi_params;
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param PATH_INFO       $fastcgi_path_info;
+    fastcgi_param PATH_TRANSLATED /code/web$fastcgi_path_info;
+    fastcgi_param SCRIPT_FILENAME /code/web$fastcgi_script_name;
+    fastcgi_param DOCUMENT_ROOT /code/web;
     fastcgi_param HTTPS           off;
 }
