update docker conf

--- a/server/nginx/global/php.docker.conf
+++ b/server/nginx/global/php.docker.conf
@@ -4,9 +4,9 @@ location ~ \.php$ {
    
     include                       fastcgi_params;
     fastcgi_param PATH_INFO       $fastcgi_path_info;
-    fastcgi_param PATH_TRANSLATED /code/web$fastcgi_path_info;
-    fastcgi_param SCRIPT_FILENAME /code/web$fastcgi_script_name;
-    fastcgi_param DOCUMENT_ROOT /code/web;
+    fastcgi_param PATH_TRANSLATED $docu_path$fastcgi_path_info;
+    fastcgi_param SCRIPT_FILENAME $docu_path$fastcgi_script_name;
+    fastcgi_param DOCUMENT_ROOT   $docu_path;
 }
 
 location ~ ^/(index|frontend_dev|admintools|admintools_dev|app|app_dev)\.php(/|$) {
@@ -15,8 +15,8 @@ location ~ ^/(index|frontend_dev|admintools|admintools_dev|app|app_dev)\.php(/|$
 
     include                       fastcgi_params;
     fastcgi_param PATH_INFO       $fastcgi_path_info;
-    fastcgi_param PATH_TRANSLATED /code/web$fastcgi_path_info;
-    fastcgi_param SCRIPT_FILENAME /code/web$fastcgi_script_name;
-    fastcgi_param DOCUMENT_ROOT /code/web;
+    fastcgi_param PATH_TRANSLATED $docu_path$fastcgi_path_info;
+    fastcgi_param SCRIPT_FILENAME $docu_path$fastcgi_script_name;
+    fastcgi_param DOCUMENT_ROOT   $docu_path;
     fastcgi_param HTTPS           off;
 }
