--- a/server/nginx/global/php.conf
+++ b/server/nginx/global/php.conf
@@ -6,6 +6,7 @@ location ~ \.php$ {
     fastcgi_param PATH_INFO       $fastcgi_path_info;
     fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param DOCUMENT_ROOT   $document_root;
 }
 
 location ~ ^/(index|frontend_dev|admintools|admintools_dev|app|app_dev)\.php(/|$) {
@@ -13,6 +14,9 @@ location ~ ^/(index|frontend_dev|admintools|admintools_dev|app|app_dev)\.php(/|$
     fastcgi_split_path_info       ^(.+\.php)(/.*)$;
 
     include                       fastcgi_params;
+    fastcgi_param PATH_INFO       $fastcgi_path_info;
+    fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param DOCUMENT_ROOT   $document_root;
     fastcgi_param HTTPS           off;
 }
